name:                aiya000-github-io
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/aiya000/aiya000.github.io#readme
license:             BSD3
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           2016 aiya000
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base
                     , hakyll
                     , highlighting-kate

executable deploy
  main-is:             deploy.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base
                     , shelly
                     , text
